--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
+body {
+  background-color: #3498db;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.login {
+  width: 300px;
+  margin: 20px auto;
+}
+
+.login-screen {
+  background-color: white;
+  margin-top: 150px;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.app-title {
+  font-family: Arial;
+  text-align: center;
+  color: #777777;
+}
+
+.login-form {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.group-control {
+  margin-bottom: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.login-field {
+  width: 250px;
+  height: 50px;
+  background-color: #ecf0f1;
+  border-radius: 5px;
+  border: 2px solid black !important;
+  padding: 10px;
+  font-family: Arial;
+  font-size: 20px;
+  text-align: center;
+  transition: all 0.25s;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.login-field:focus {
+  border: 2px solid #3498db !important;
+  outline: none;
+}
+.login-btn {
+  width: 250px;
+  height: 50px;
+  background-color: #3498db;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+  font-family: Arial;
+  font-size: 16px;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border: none;
 }
