--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ body {
   height: 50px;
   background-color: #ecf0f1;
   border-radius: 5px;
-  border: 2px solid black !important;
+  border: none;
   padding: 10px;
   font-family: Arial;
   font-size: 20px;
@@ -45,8 +45,7 @@ body {
   transition: all 0.25s;
 }
 .login-field:focus {
-  border: 2px solid #3498db !important;
-  outline: none;
+  outline: 1px solid #3498db !important;
 }
 .login-btn {
   width: 250px;
